--- a/my-dev-portal/src/styles/theme.css
+++ b/my-dev-portal/src/styles/theme.css
@@ -64,8 +64,7 @@
     var(--emerald) -2.47%,
     var(--yellow) 102.78%
   );
-
-  --font-primary: "Inter", sans-serif;
+  --font-primary: Roboto, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   --font-secondary: "Space Grotesk", sans-serif;
   --font-mono: "Fira Code", monospace;
 }
