--- a/my-dev-portal/src/styles/components/layouts/page-layout.css
+++ b/my-dev-portal/src/styles/components/layouts/page-layout.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  gap: 56px;
 
   height: 100%;
   width: 100%;
@@ -13,12 +14,17 @@
   flex-shrink: 0;
   display: flex;
   flex-direction: column;
-  margin-top: 3.2rem;
+  gap: 56px;
 
   max-width: 120rem;
   width: 100%;
+  white-space: pre-wrap;
+}
+
+.page-layout__focus {
   background: #212121;
   padding: 3rem;
+  width: 100%;
 }
 
 @media only screen and (max-width: 640px) {
