--- a/my-dev-portal/src/styles/general.css
+++ b/my-dev-portal/src/styles/general.css
@@ -9,11 +9,13 @@ html {
   text-rendering: geometricPrecision;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   color: #d9d9d9;
+  background-color: var(--moesif-black);
 }
 
 html,
 body {
-  height: 100%;
+  min-height: 100vh;
+  height: fit-content;
   width: 100%;
   margin: 0;
   padding: 0;
@@ -50,21 +52,8 @@ h3,
 h4,
 h5,
 h6 {
-  color: rgba(0, 0, 0, 0.86);
-}
-
-h1,
-h2,
-h3 {
-  margin-top: 3.2rem;
-  margin-bottom: 1.6rem;
-}
-
-h4,
-h5,
-h6 {
-  margin-top: 1.6rem;
-  margin-bottom: 1.6rem;
+  font-weight: 400;
+  margin: 0;
 }
 
 h1 {
@@ -163,16 +152,17 @@ code {
   color: black;
 }
 
-.white-text {
-  color: white;
-}
-
 .iframeWrapper {
   position: relative;
   padding-bottom: 56.25%; /* 16:9 */
   padding-top: 25px;
   height: 0;
 }
+
+.iframeWrapper:first-child {
+  margin-bottom: 40px;
+}
+
 .iframeWrapper iframe {
   position: absolute;
   top: 0;
@@ -185,4 +175,9 @@ code {
   .mobile-scroll-lock {
     overflow: hidden;
   }
+}
+
+stripe-pricing-table {
+  padding-top: 82px;
+  padding-bottom: 95px;
 }
