--- a/my-dev-portal/src/styles/general.css
+++ b/my-dev-portal/src/styles/general.css
@@ -152,15 +152,16 @@ code {
   color: black;
 }
 
-.iframeWrapper {
-  position: relative;
-  padding-bottom: 56.25%; /* 16:9 */
-  padding-top: 25px;
-  height: 0;
+.dashboards-wrapper {
+  display: flex;
+  justify-content: space-between;
 }
 
-.iframeWrapper:first-child {
-  margin-bottom: 40px;
+.iframeWrapper {
+  position: relative;
+  padding-bottom: 27%;
+  width: 0;
+  padding-right: 49%;
 }
 
 .iframeWrapper iframe {
