[WIP] Asgardeo additions

--- a/my-dev-portal/src/styles/general.css
+++ b/my-dev-portal/src/styles/general.css
@@ -179,7 +179,7 @@ code {
 }
 
 .stripe-pricing-table-container {
-  background-color: white;
+  background-color: black;
   padding-top: 82px;
   padding-bottom: 95px;
 }
