--- a/my-dev-portal/src/styles/components/button.css
+++ b/my-dev-portal/src/styles/components/button.css
@@ -12,7 +12,9 @@ button {
 
   user-select: none;
 
-  transition: background 0.3s ease-out, color 0.3s ease-out;
+  transition:
+    background 0.3s ease-out,
+    color 0.3s ease-out;
 
   /* responsive */
   padding: 0.8rem 1.2rem;
@@ -95,7 +97,9 @@ button {
   cursor: pointer;
   user-select: none;
 
-  transition: background 0.3s ease-out, color 0.3s ease-out;
+  transition:
+    background 0.3s ease-out,
+    color 0.3s ease-out;
 }
 
 .button__purp {
