--- a/my-dev-portal/src/styles/components/grids/messages-grid.css
+++ b/my-dev-portal/src/styles/components/grids/messages-grid.css
@@ -39,7 +39,9 @@
   user-select: none;
   outline: none;
 
-  transition: background 0.3s ease-out, color 0.3s ease-out;
+  transition:
+    background 0.3s ease-out,
+    color 0.3s ease-out;
 
   /* responsive */
 
