--- a/my-dev-portal/src/styles/components/subscription-table.css
+++ b/my-dev-portal/src/styles/components/subscription-table.css
@@ -1,3 +1,12 @@
+.sub-table {
+  background-color: rgb(50, 50, 50);
+  padding-right: 5em;
+  padding-left: 5em;
+  padding-top: 1em;
+  padding-bottom: 3em;
+  margin-bottom: 1em;
+}
+
 .sub-table > table {
   width: 100%;
   border-collapse: collapse;
