--- a/my-dev-portal/src/styles/components/plans.css
+++ b/my-dev-portal/src/styles/components/plans.css
@@ -14,6 +14,7 @@
 
 .plans--container {
   display: grid;
+
   grid-template-columns: 1fr;
   gap: 20px; /* Space between tiles */
   align-items: stretch;
@@ -35,11 +36,20 @@
 @media (min-width: 900px) {
   .plans--container {
       grid-template-columns: repeat(3, 1fr);
+      padding-left: 30px;
+      padding-right: 30px;
   }
 }
 
 @media (min-width: 1200px) {
   .plans--container {
       grid-template-columns: repeat(4, 1fr);
+      padding-left: 30px;
+      padding-right: 30px;
   }
+}
+
+
+.no-plan-box {
+  display: block;
 }
