--- a/my-dev-portal/src/styles/styles.scss
+++ b/my-dev-portal/src/styles/styles.scss
@@ -1,6 +1,6 @@
 @import "theme.css";
 @import "general.css";
 @import "components/index.css";
-@import "scss/tabel.scss";
+@import "scss/table.scss";
 
 
