--- a/my-dev-portal/src/styles/scss/hero.scss
+++ b/my-dev-portal/src/styles/scss/hero.scss
@@ -1,4 +1,3 @@
-
 .hero {
   display: flex;
   flex-direction: column;
@@ -20,6 +19,8 @@
   .buttons {
     display: flex;
     gap: 10px;
+
+    justify-content: center;
   }
 
   .btn {
@@ -48,18 +49,22 @@
 
 @media (min-width: 756px) {
   .hero {
-      flex-direction: row;
-      text-align: left;
-      align-items: flex-start; /* Aligns content to the top */
+    flex-direction: row;
+    text-align: left;
+    align-items: flex-start; /* Aligns content to the top */
+
+    .buttons {
+      justify-content: flex-start;
+    }
   }
 
   .hero-content {
-      flex: 1;
+    flex: 1;
   }
 
   .hero-image {
-      flex: 1;
-      display: flex;
-      justify-content: center;
+    flex: 1;
+    display: flex;
+    justify-content: center;
   }
 }
