--- a/my-dev-portal/src/styles/scss/plans.scss
+++ b/my-dev-portal/src/styles/scss/plans.scss
@@ -28,14 +28,14 @@
 
 @media (min-width: 700px) {
   .plans--container {
-      grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(2, 1fr);
   }
 }
 
 @media (min-width: 1200px) {
   .plans--container {
-      grid-template-columns: repeat(3, 1fr);
-      /* padding-left: 30px;
+    grid-template-columns: repeat(3, 1fr);
+    /* padding-left: 30px;
       padding-right: 30px; */
   }
 }
@@ -48,9 +48,34 @@
   }
 } */
 
-
 .no-plan-box {
   display: block;
+  border-radius: 10px;
+  border: 1px solid #ccc;
+  padding: 20px;
+  max-width: 600px;
+  width: 100;
+  margin: 20px auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center; /* Center horizontally */
+  justify-content: center; /* Center vertically */
+
+  .box-title {
+    font-weight: 600;
+    padding: 1em;
+  }
+
+  .box-description {
+    font-size: smaller;
+    font-weight: 300;
+  }
+
+  .box-actions {
+    display: flex;
+    gap: 1em;
+
+  }
 }
 
 .tier-arrow {
