--- a/my-dev-portal/src/styles/scss/plans.scss
+++ b/my-dev-portal/src/styles/scss/plans.scss
@@ -19,22 +19,46 @@
   align-items: stretch;
 }
 
-.plan--single {
+.price--tile {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   height: 100%;
   background-color: #2d2c2c;
-  padding: 10px;
+  padding: 15px;
   border-width: 1px;
   border-radius: 10px;
 }
 
 .plan--content {
   flex-grow: 1;
+
+  .single-price {
+    margin-top: 1em;
+    margin-bottom: 1em;
+  }
+
+  .single-price--price {
+    font-size: x-large;
+  }
+
+  .single-price--unit {
+    font-size: x-small;
+  }
 }
 
-.plan--action {
+.price-name {
+  font-weight: 600;
+  margin-bottom: 5px;
+}
+
+.plan-period {
+  font-weight: 300;
+  font-size: medium;
+  margin-bottom: 5px;
+}
+
+.plan--bottom {
   margin-top: auto;
 }
 
