adjust the style bit more.

--- a/my-dev-portal/src/styles/scss/plans.scss
+++ b/my-dev-portal/src/styles/scss/plans.scss
@@ -35,7 +35,11 @@
 
   .single-price {
     margin-top: 1em;
+    height: 50%;
     margin-bottom: 1em;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
   }
 
   .single-price--price {
