--- a/my-dev-portal/src/styles/components/page-footer.css
+++ b/my-dev-portal/src/styles/components/page-footer.css
@@ -7,7 +7,7 @@
 
   margin-top: 2.4rem;
 
-  background-color: var(--dark-aluminium);
+  background-color: #282c34;
 
   color: var(--light-aluminium);
   font-weight: 500;
