--- a/my-dev-portal/src/styles/scss/table.scss
+++ b/my-dev-portal/src/styles/scss/table.scss
@@ -15,7 +15,8 @@ $header-background: none !default;
   }
 
   tr {
-    border-bottom: 1px solid rgb(95, 95, 95);
+    // we need line below each row.
+    // border-bottom: 1px solid rgb(72, 72, 72);
   }
   td {
     border: none;
