--- a/my-dev-portal/src/styles/general.css
+++ b/my-dev-portal/src/styles/general.css
@@ -9,7 +9,7 @@ html {
   text-rendering: geometricPrecision;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   color: #d9d9d9;
-  background-color: var(--moesif-black);
+  background-color: var(--overall-bg);
 }
 
 html,
@@ -22,7 +22,7 @@ body {
 }
 
 body {
-  background-color: var(--black);
+  background-color: var(--overall-bg);
 
   font-family: var(--font-primary);
   font-size: 1.6rem;
