--- a/my-dev-portal/src/styles/theme.css
+++ b/my-dev-portal/src/styles/theme.css
@@ -3,6 +3,24 @@
 /* Theme */
 
 :root {
+  --dark-theme-0: #272F34;
+  --dark-theme-1: #2D353A;
+  --dark-theme-2: rgba(255, 255, 255, 0.1);
+  --dark-theme-3: #5B676E;
+  --dark-theme-4: #AAB4BD;
+  --dark-theme-5: #D2DADE;
+  --dark-theme-6: #FFFFFF;
+  --dark-background: #121212;
+
+  --light-theme-0: #FFFFFF;
+  --light-theme-1: #FAFAFA;
+  --light-theme-2: #5B676E;
+  --light-theme-3: #D2DADE;
+  --light-theme-4: #AAB4BD;
+  --light-theme-5: #5B676E;
+  --light-theme-6: #272F34;
+
+
   --orange: #ff4f00;
   --indigo: #635dff;
   --white: #fff;
@@ -17,6 +35,8 @@
   --aqua: #3ec6eb;
   --emerald: #1bc99f;
   --moesif-black: #272f34;
+
+  --overall-bg: var(--dark-background);
 
   --yellow-mandarine-gradient: linear-gradient(
     153.07deg,
