continue to factor out variables

--- a/my-dev-portal/src/styles/styles.scss
+++ b/my-dev-portal/src/styles/styles.scss
@@ -17,6 +17,8 @@ $light-theme-6: #272F34;
 
 $muted-text-color: $dark-theme-4;
 $border-color: $dark-theme-3;
+$overall-bg: $dark-background;
+$focus-bg: $dark-theme-0;
 
 @import "theme.css";
 @import "general.css";
