continue to refactor color

--- a/my-dev-portal/src/styles/styles.scss
+++ b/my-dev-portal/src/styles/styles.scss
@@ -19,6 +19,7 @@ $muted-text-color: $dark-theme-4;
 $border-color: $dark-theme-3;
 $overall-bg: $dark-background;
 $focus-bg: $dark-theme-0;
+$nav-bar-color: $dark-background;
 
 @import "theme.css";
 @import "general.css";
