--- a/my-dev-portal/src/styles/components/mobile-nav-bar.css
+++ b/my-dev-portal/src/styles/components/mobile-nav-bar.css
@@ -8,8 +8,8 @@
 
   z-index: 300;
 
-  background-color: var(--black);
-  box-shadow: 0px 8px 16px 0px rgba(34, 34, 41, 0.4);
+  background-color: var(--nav-bg);
+  /* box-shadow: 0px 8px 16px 0px rgba(34, 34, 41, 0.4); */
 }
 
 .mobile-nav-bar {
