Update styling more (#93)
update styling

--- a/my-dev-portal/src/styles/components/layouts/page-layout.css
+++ b/my-dev-portal/src/styles/components/layouts/page-layout.css
@@ -4,6 +4,7 @@
   align-items: center;
   gap: 56px;
 
+  min-height: 90vh;
   height: 100%;
   width: 100%;
 }
@@ -30,7 +31,7 @@
 }
 
 .page-layout__focus {
-  background: #212121;
+  background: var(--focus-bg);
   padding: 3rem;
   width: 100%;
 }
