--- a/my-dev-portal/src/styles/components/nav-bar.css
+++ b/my-dev-portal/src/styles/components/nav-bar.css
@@ -5,8 +5,7 @@
   width: 100%;
 
   z-index: 300;
-  background-color: #191d20;
-  box-shadow: 0px 8px 16px 0px rgba(34, 34, 41, 0.4);
+  background-color: var(--nav-bg);
 }
 
 .nav-bar {
