support background image and new hero image

--- a/my-dev-portal/src/styles/components/layouts/page-layout.css
+++ b/my-dev-portal/src/styles/components/layouts/page-layout.css
@@ -9,6 +9,11 @@
   width: 100%;
 }
 
+.page-layout--home {
+  background-image: url('../../../images/assets/dev-portal-hero-bg@2x.png');
+  background-repeat: no-repeat;
+}
+
 .page-layout > * {
   padding-inline: 24px;
 }
