--- a/my-dev-portal/src/styles/scss/hero.scss
+++ b/my-dev-portal/src/styles/scss/hero.scss
@@ -71,3 +71,21 @@
     margin-top: 0px;
   }
 }
+
+.heading-centered {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
+  max-width: 600px;
+
+  h1 {
+    padding-bottom: 10px;
+  }
+
+  .description {
+    padding-top: 10px;
+    font-weight: 300;
+  }
+}
