styling the key pages

--- a/my-dev-portal/src/styles/components/button.css
+++ b/my-dev-portal/src/styles/components/button.css
@@ -98,7 +98,10 @@ button {
 }
 
 .button__purp {
+  background: var(--white);
+  color: var(--black);
   width: 100%;
+  border: unset;
 }
 
 .button__sign-up {
