--- a/my-dev-portal/src/styles/components/keys.css
+++ b/my-dev-portal/src/styles/components/keys.css
@@ -39,3 +39,13 @@
   border-left: none;
   border-radius: 0 4px 4px 0;
 }
+
+.page-action {
+  width: 100%;
+}
+
+@media screen and (min-width: 500px) {
+  .page-action {
+    max-width: 500px;
+  }
+}
