--- a/my-dev-portal/src/styles/components/mobile-nav-bar.css
+++ b/my-dev-portal/src/styles/components/mobile-nav-bar.css
@@ -98,7 +98,7 @@
 .mobile-nav-bar__tab--active {
   text-decoration-line: underline;
   text-decoration-style: solid;
-  text-decoration-color: var(--orange);
+  text-decoration-color: var(--white);
 
   /* responsive */
 
