--- a/my-dev-portal/src/styles/styles.scss
+++ b/my-dev-portal/src/styles/styles.scss
@@ -29,8 +29,43 @@ $nav-bar-color: $dark-background;
 @import "scss/plans.scss";
 
 
-// standard styles
+// shared styles
 .text-muted {
   color: $muted-text-color;
   font-weight: 300;
 }
+
+.container-box {
+  border-radius: 10px;
+  border: 1px solid $border-color;
+  padding: 2em;
+}
+
+.notice-box {
+  display: block;
+  border-radius: 10px;
+  border: 1px solid $border-color;
+  padding: 50px 20px;
+  width: 100%;
+  margin: 20px auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center; /* Center horizontally */
+  justify-content: center; /* Center vertically */
+
+  .box-title {
+    font-weight: 600;
+    padding: 1em;
+  }
+
+  .box-description {
+    font-size: smaller;
+    font-weight: 300;
+  }
+
+  .box-actions {
+    display: flex;
+    gap: 1em;
+  }
+}
+
