fixed subscription display

--- a/my-dev-portal/src/styles/scss/plans.scss
+++ b/my-dev-portal/src/styles/scss/plans.scss
@@ -16,6 +16,12 @@
   border-radius: 10px;
 }
 
+.plan--subscription-period {
+  font-size: xx-small;
+  margin-bottom: 5px;
+}
+
+
 .plan--content {
   flex-grow: 1;
 
