--- a/my-dev-portal/src/styles/scss/hero.scss
+++ b/my-dev-portal/src/styles/scss/hero.scss
@@ -7,15 +7,18 @@
   text-align: center;
 
   h1 {
-    font-size: 3rem;
+    font-size: 6rem;
     margin-bottom: 10px;
-    font-weight: 800;
+    font-weight: 600;
+    color: white;
   }
 
   p {
-    font-size: 1.5rem;
+    font-size: 2.5rem;
     margin-bottom: 20px;
-    font-weight: 500;
+    line-height: 4rem;
+    font-weight: 300;
+    color: white;
   }
 
   .buttons {
