--- a/my-dev-portal/src/styles/components/nav-bar.css
+++ b/my-dev-portal/src/styles/components/nav-bar.css
@@ -63,9 +63,10 @@
 
   margin-right: 24px;
 
-  font-weight: 500;
+  font-weight: 400;
   font-size: 16px;
   line-height: 16px;
+  transition: background 0.1s ease-out, color 0.3s ease-out;
 }
 
 .nav-bar__tab:last-child {
@@ -85,6 +86,18 @@
 
 .nav-bar__tab:hover {
   color: var(--white);
+  text-decoration: none;
+}
+
+.nav-bar__tab--active:hover {
+  text-decoration-line: underline;
+  text-decoration-style: solid;
+  text-decoration-color: var(--orange);
+
+  /* responsive */
+
+  text-decoration-thickness: 4px;
+  text-underline-offset: 8px;
 }
 
 .nav-bar__icon {
